# rag-rbac-chatbot

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.streamlit  README.md  fly.toml  fly.ui.toml  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
config/: roles.py  settings.py
evaluation/: ragas_evaluator.py
guardrails/: guardrail_chain.py  pii_detector.py  scope_detector.py
monitoring/: cost_alerts.py  cost_tracker.py  metrics_store.py
scripts/: entrypoint.sh  generate_data.py  ingest.py  release.sh
src/api/: dependencies.py  main.py
src/api/routes/: auth.py  chat.py  health.py  monitoring.py
src/auth/: jwt_handler.py  models.py  user_store.py
src/graph/: edges.py  nodes.py  state.py  workflow.py
src/ingestion/: chunker.py  embedder.py  metadata_schema.py
src/retrieval/: rbac_filter.py  retriever.py  vector_store.py
src/ui/: api_client.py  app.py
src/ui/components/: citations.py  login.py  sidebar.py
tests/test_auth/: test_jwt_handler.py
tests/test_guardrails/: test_pii_detector.py  test_scope_detector.py
tests/test_retrieval/: test_rbac_filter.py
